syntax = "proto3";

option csharp_namespace = "PharmacyAPI.Protos";
import "Protos/model.proto";

service OrderMedicineGRPCService {
	rpc checkIfMedicineExists (MedicineOrderRequest) returns (MedicineOrderResponse);
	rpc orderMedicine (MedicineOrderRequest) returns (MedicineOrderResponse);
}